--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,8 @@
             "error",
             "always"
         ],
-        "react/jsx-uses-react": "error"
+        "react/jsx-uses-react": "error",
+        "react/prop-types": 0
        
     }
 }
